Latest update. List of pending requests/unfriended Facebook friends works less some small details. Working on getting list of real friends now.